--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^7.4.1",
+    "@react-native-community/datetimepicker": "6",
     "@react-navigation/bottom-tabs": "6",
     "@react-navigation/native": "6",
     "@react-navigation/native-stack": "6",
     "@reduxjs/toolkit": "^1.9.5",
-    "expo": "~49.0.5",
+    "expo": "48",
     "expo-location": "^16.1.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-datepicker": "^1.7.2",
     "react-native-maps": "^1.7.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
