--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-redux": "^8.1.1"
+    "react-redux": "^8.1.1",
+    "supercluster": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
