--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "6",
     "@react-navigation/native-stack": "6",
     "@reduxjs/toolkit": "^1.9.5",
+    "date-fns": "^2.30.0",
     "expo": "48",
     "expo-location": "^16.1.0",
     "expo-status-bar": "~1.6.0",
