--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "6",
+    "@react-native-community/google-signin": "^5.0.0",
     "@react-navigation/bottom-tabs": "6",
     "@react-navigation/native": "6",
     "@react-navigation/native-stack": "6",
@@ -17,7 +18,10 @@
     "expo": "48",
     "expo-location": "^16.1.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.1.0",
+    "jwt-decode": "^3.1.2",
     "react": "18.2.0",
+    "react-google-button": "^0.7.2",
     "react-native": "0.72.3",
     "react-native-maps": "^1.7.1",
     "react-native-safe-area-context": "4.6.3",
