--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "date-fns": "^2.30.0",
     "expo": "48",
+    "expo-font": "^11.4.0",
     "expo-location": "^16.1.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
