--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "@reduxjs/toolkit": "^1.9.5",
     "date-fns": "^2.30.0",
     "expo": "48",
+    "expo-auth-session": "~4.0.3",
+    "expo-crypto": "~12.2.1",
     "expo-location": "^16.1.0",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.16.4",
+    "expo-web-browser": "~12.1.1",
     "firebase": "^10.1.0",
     "jwt-decode": "^3.1.2",
     "react": "18.2.0",
